2009-11-09 Tamino Dauth <tamino@cdauth.de>
* Revised option descriptions.
* Revised German option descriptions.
* Released version 0.3.

2009-11-04 Tamino Dauth <tamino@cdauth.de>
* --database option has shortcut -L now instead of -b.
* Fixed various option issues.
* Added --nocall option support.

2009-11-03 Tamino Dauth <tamino@cdauth.de>
* Revised several code files and renamed members of class File.

2009-10-31 Tamino Dauth <tamino@cdauth.de>
* Revised class Call.

2009-10-24 Tamino Dauth <tamino@cdauth.de>
* Added function createHtmlHeader.
* Added file path argument to option --database.
* Added several argument parsing functionality to option parsing.
* Renamed several members of class Parser.

2009-10-11 Tamino Dauth <tamino@cdauth.de>
* Added first JassHelper 0.9.Z.3 support.
* Improved class intialization.

2009-09-11 Tamino Dauth <tamino@cdauth.de>
* Renamed option methods of class Vjassdoc.
* Duration and CPU duration of Vjassdoc are accessable now.
* Added file "src/gui/application.hpp".
* Added file "src/gui/application.cpp".
* Improved class Widget.
* Improved UI of class Widget.

2009-09-10 Tamino Dauth <tamino@cdauth.de>
* Improved cmake files.
* Added file "src/gui/widget.hpp".
* Added file "src/gui/widget.cpp".

2009-09-09 Tamino Dauth <tamino@cdauth.de>
* Improved cmake files.
* Improved main window widget UI.

2009-09-08 Tamino Dauth <tamino@cdauth.de>
* Fixed database and improved writing.
* Added several methods to class Parser.
* Improved adding databases.
* Revised some cmake files.
* Added files "src/gui/CMakeFiles.txt", "src/gui/main.cpp", "src/gui/mainwindow.hpp", "src/gui/mainwindow.cpp" and "src/gui/ui/widget.ui".

2009-08-08 Tamino Dauth <tamino@cdauth.de>
* Improved class Compiler.

2009-08-03 Tamino Dauth <tamino@cdauth.de>
* Added method autoCompletion to class Parser.
* Added file "tests/autocompletion.cpp".
* Flag "debug" should enable test file compilation now.
* Fixed option "--time".

2009-07-30 Tamino Dauth <tamino@cdauth.de>