@@ -1,3 +1,5 @@
+include_directories(../src)
+
 add_executable(autocompletion autocompletion.cpp)
 target_link_libraries(autocompletion vjassdoclib)
 
